--- a/src/app/private/role-management/role-management.component.html
+++ b/src/app/private/role-management/role-management.component.html
@@ -1,1 +1,64 @@
-<p>role-management works!</p>
+<div>
+  <div class="flex justify-between mb-4">
+    <h2>Role Management</h2>
+    <button nz-button nzType="primary" (click)="showCreateModal()">
+      <span nz-icon nzType="plus"></span>Create Role
+    </button>
+  </div>
+
+  <nz-table #roleTable [nzData]="roleStore.roles()">
+    <thead>
+      <tr>
+        <th>Role Name</th>
+        <th>Permissions</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let role of roleTable.data">
+        <td>{{ role.name }}</td>
+        <td>
+          <nz-tag *ngFor="let permission of role.permissions">
+            {{ permission }}
+          </nz-tag>
+        </td>
+        <td class="flex gap-4">
+          <button nz-button nzType="primary" (click)="showEditModal(role)">
+            <span>Edit</span>
+          </button>
+          <button nz-button nzType="default" (click)="deleteRole(role)">
+            <span>Delete</span>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
+
+  <nz-spin *ngIf="roleStore.loading()"></nz-spin>
+</div>
+
+<nz-modal
+  [(nzVisible)]="isModalVisible"
+  [nzTitle]="selectedRole ? 'Edit Role' : 'Create Role'"
+  (nzOnCancel)="isModalVisible = false"
+  [nzFooter]="null"
+  (nzOnOk)="isModalVisible = false"
+>
+  <ng-container *nzModalContent>
+    <app-role-form
+      [role]="selectedRole"
+      (formSubmit)="handleFormSubmit($event)"
+    />
+  </ng-container>
+</nz-modal>
+
+<nz-modal
+  [(nzVisible)]="isDeleteModalVisible"
+  nzTitle="Confirm Delete"
+  (nzOnCancel)="isDeleteModalVisible = false"
+  (nzOnOk)="confirmDelete()"
+>
+  <ng-container *nzModalContent>
+    <p>Are you sure you want to delete this role?</p>
+  </ng-container>
+</nz-modal>
