style: improve HTML readability and add modal comments

--- a/src/app/private/role-management/role-management.component.html
+++ b/src/app/private/role-management/role-management.component.html
@@ -55,6 +55,7 @@
   }
 </div>
 
+<!-- Role Form Modal -->
 <nz-modal
   [(nzVisible)]="isModalVisible"
   [nzTitle]="selectedRole ? 'Edit Role' : 'Create Role'"
@@ -70,6 +71,7 @@
   </ng-container>
 </nz-modal>
 
+<!-- Delete Role Confirmation Modal -->
 <nz-modal
   [(nzVisible)]="isDeleteModalVisible"
   nzTitle="Confirm Delete"
